2009-01-31  Armin Burgmeier  <armin@openismus.com>

	* win32_installer/gtkmm-vc80-2_4.vsprops:
	* win32_installer/gtkmm-vc80-d-2_4.vsprops: Disabled compiler warning
	4250 also for MSVC2005. Bug #568083 (Tao Wang).

2009-01-27  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/treeview.[hg|ccg]: get_path_at_pos(): 
	Improved the documentation because it was improved in GTK+.
	Added a get_path_at_pos() overload that takes less parameters.

2.15.1:

2009-01-23  Armin Burgmeier  <armin@openismus.com>

	* win32_installer/gtkmm-vc90-2_4.vsprops:
	* win32_installer/gtkmm-vc90-d-2_4.vsprops: Disabled compiler warning
	4250. Bug #568083 (Tao Wang).

2009-01-20  Murray Cumming  <murrayc@murrayc.com>

	* gtk/gtkmm/stock.cc: Actually define and initialize 
	ORIENTATION_PORTRAIT, ORIENTATION_LANDSCAPE, 
	ORIENTATION_REVERSE_LANDSCAPE, and ORIENTATION_REVERSE_PORTRAIT, 
	avoiding undefined reference errors when trying to use these.
	Bug #568416 (Tao Wang).

2009-01-20  Deng Xiyue  <manphiz@gmail.com>

	* Change license header to mention Lesser General Public License
	version 2.1 instead of Library General Public License, to be
	consistent with COPYING.

2009-01-19  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/treepath.ccg:
	* gtk/src/treepath.hg: empty(): Also check for a null underlying 
	GtkTreePath. Added operator bool() to do the same, just calling !empty().

2009-01-19  Tao Wang  <dancefire@gmail.com>

	* gtk/src/papersize.hg: Constructor: Remove the default value for the 
	name parameter, because there is already a default constructor, 
	which does something quite different. See the comments.
	This caused MSVC++ warning C4520 with Visual Studio 2008.
	Bug #568074.

2009-01-19  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_methods.defs:
	* gtk/src/gtk_signals.defs: Regenerated.
	* gtk/src/entry.hg: Renamed methods and adapted to requested GTK+ 
	API changes in #567887.

	* gtk/src/imagemenuitem.hg: Fixed a typo in the accel_group property 