@@ -126,8 +126,8 @@ IGNORE_PREFIX          =
 GENERATE_HTML          = YES
 HTML_OUTPUT            = html
 HTML_FILE_EXTENSION    = .html
-HTML_HEADER            = gtkmm_header.html_fragment
-HTML_FOOTER            = gtkmm_footer.html_fragment
+HTML_HEADER            = @srcdir@/gtkmm_header.html_fragment
+HTML_FOOTER            = @srcdir@/gtkmm_footer.html_fragment
 HTML_STYLESHEET        = 
 HTML_ALIGN_MEMBERS     = YES
 GENERATE_HTMLHELP      = NO
