@@ -1,3 +1,9 @@
+2009-02-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>	
+
+	* docs/reference/Doxyfile.in:
+	* docs/reference/Makefile.am: Allow pangomm to build outside the source 
+	tree. Bug #570325
+
 2009-01-31  Armin Burgmeier  <armin@openismus.com>
 
 	* win32_installer/gtkmm-vc80-2_4.vsprops:
